Updated type info layout
Fixed stackpanel layout issue in tooltips

--- a/OpenSky.Client/Controls/AircraftTypeDetails.xaml
+++ b/OpenSky.Client/Controls/AircraftTypeDetails.xaml
@@ -25,16 +25,22 @@
     <UserControl.Resources>
         <converters:SettingsUnitConverter x:Key="SettingsUnitConverter" />
         <converters:NullItemToEnabledConverter x:Key="NullItemToEnabledConverter" />
+        <converters:NullItemToVisibilityConverter x:Key="NullItemToVisibilityConverter" />
+        <converters:BooleanToImageConverter x:Key="BooleanToImageConverter" />
     </UserControl.Resources>
     <Grid>
         <GroupBox>
             <GroupBox.Header>
-                <TextBlock FontWeight="DemiBold" Text="{Binding Type.Name}" />
+                <StackPanel Name="GroupBoxHeader" Orientation="Horizontal" Visibility="{Binding Type, Converter={StaticResource NullItemToVisibilityConverter}}">
+                    <TextBlock FontWeight="DemiBold" Text="{Binding Type.Name}" />
+                    <TextBlock Margin="5,0">by</TextBlock>
+                    <TextBlock Text="{Binding Type.Manufacturer}" />
+                </StackPanel>
             </GroupBox.Header>
             <Grid Margin="5" IsEnabled="{Binding Type, Converter={StaticResource NullItemToEnabledConverter}}">
                 <Grid.ColumnDefinitions>
                     <ColumnDefinition Width="Auto" />
-                    <ColumnDefinition Width="Auto" />
+                    <ColumnDefinition Width="1*" />
                     <ColumnDefinition Width="Auto" />
                     <ColumnDefinition Width="Auto" />
                 </Grid.ColumnDefinitions>
@@ -55,6 +61,14 @@
                 </Grid.RowDefinitions>
 
                 <Image Grid.Row="0" Grid.Column="0" Grid.ColumnSpan="4" Width="640" Height="360" Source="{Binding AircraftImage, Mode=OneWay}" HorizontalAlignment="Left" />
+                <StackPanel Name="ImageTags" Grid.Row="0" Grid.Column="0" Grid.ColumnSpan="4" Orientation="Vertical" HorizontalAlignment="Right" VerticalAlignment="Bottom" Margin="5">
+                    <Border Background="{StaticResource OpenSkyTealBrush}" CornerRadius="5" Visibility="{Binding Type, Converter={StaticResource NullItemToVisibilityConverter}}">
+                        <TextBlock Text="{Binding Type.Category}" FontSize="15" FontWeight="SemiBold" Margin="8" HorizontalAlignment="Center" />
+                    </Border>
+                    <Border Background="{StaticResource OpenSkyTealBrush}" CornerRadius="5" Margin="0,3,0,0" Visibility="{Binding Type, Converter={StaticResource NullItemToVisibilityConverter}}">
+                        <TextBlock Text="{Binding Type.Simulator}" FontSize="15" FontWeight="SemiBold" Margin="8" HorizontalAlignment="Center" />
+                    </Border>
+                </StackPanel>
                 <TextBlock Grid.Row="0" Grid.Column="0" Grid.ColumnSpan="4" HorizontalAlignment="Center" VerticalAlignment="Center" FontSize="30" Foreground="{StaticResource OpenSkyTealLightBrush}" Text="{Binding AircraftImagePlaceholderText, Mode=OneWay}" TextWrapping="Wrap" />
                 <Border Grid.Row="0" Grid.Column="0" Grid.ColumnSpan="4" Background="#B0000000" Visibility="{Binding LoadingVisibility}">
                     <StackPanel Orientation="Vertical" VerticalAlignment="Center">
@@ -63,54 +77,45 @@
                     </StackPanel>
                 </Border>
 
-                <TextBlock Grid.Row="1" Grid.Column="0" VerticalAlignment="Center" Margin="0,10,0,0">Name:</TextBlock>
-                <TextBlock Grid.Row="2" Grid.Column="0" VerticalAlignment="Center">Manufacturer:</TextBlock>
-                <TextBlock Grid.Row="3" Grid.Column="0" VerticalAlignment="Center">Simulator:</TextBlock>
-                <TextBlock Grid.Row="4" Grid.Column="0" VerticalAlignment="Center">Category:</TextBlock>
+                <TextBlock Grid.Row="1" Grid.Column="0" VerticalAlignment="Center" Margin="0,15,0,0">Engines:</TextBlock>
+                <TextBlock Grid.Row="2" Grid.Column="0" VerticalAlignment="Center">Fuel type:</TextBlock>
+                <TextBlock Grid.Row="3" Grid.Column="0" VerticalAlignment="Center">Empty weight:</TextBlock>
+                <TextBlock Grid.Row="4" Grid.Column="0" VerticalAlignment="Center">Fuel total capacity:</TextBlock>
+                <TextBlock Grid.Row="5" Grid.Column="0" VerticalAlignment="Center">Maximum fuel weight:</TextBlock>
+                <TextBlock Grid.Row="6" Grid.Column="0" VerticalAlignment="Center">Max gross weight:</TextBlock>
+                <TextBlock Grid.Row="7" Grid.Column="0" VerticalAlignment="Center" Margin="0,0,15,0">Minimum runway length:</TextBlock>
 
-                <TextBlock Grid.Row="5" Grid.Column="0" VerticalAlignment="Center" Margin="0,15,0,0">Requires co-pilot?:</TextBlock>
-                <TextBlock Grid.Row="6" Grid.Column="0" VerticalAlignment="Center">Requires flight engineer?:</TextBlock>
-                <TextBlock Grid.Row="7" Grid.Column="0" VerticalAlignment="Center">Minimum runway length:</TextBlock>
-                <TextBlock Grid.Row="8" Grid.Column="0" VerticalAlignment="Center">Engines:</TextBlock>
-                <TextBlock Grid.Row="9" Grid.Column="0" VerticalAlignment="Center">Retractable gear?:</TextBlock>
-                <TextBlock Grid.Row="10" Grid.Column="0" VerticalAlignment="Center">Flaps?:</TextBlock>
-
-                <TextBlock Grid.Row="5" Grid.Column="2" VerticalAlignment="Center" Margin="0,15,0,0">Fuel type:</TextBlock>
-                <TextBlock Grid.Row="6" Grid.Column="2" VerticalAlignment="Center">Fuel total capacity:</TextBlock>
-                <TextBlock Grid.Row="7" Grid.Column="2" VerticalAlignment="Center">Maximum fuel weight:</TextBlock>
-                <TextBlock Grid.Row="8" Grid.Column="2" VerticalAlignment="Center">Requires manual fuelling?:</TextBlock>
-
-                <TextBlock Grid.Row="10" Grid.Column="2" VerticalAlignment="Center" Margin="0,0,0,0">Empty weight:</TextBlock>
-                <TextBlock Grid.Row="11" Grid.Column="2" VerticalAlignment="Center">Max gross weight::</TextBlock>
-                <TextBlock Grid.Row="12" Grid.Column="2" VerticalAlignment="Center">Requires manual loading?:</TextBlock>
-
-                <TextBlock Grid.Row="1" Grid.Column="1" Grid.ColumnSpan="3" VerticalAlignment="Center" Margin="10,15,0,0" Text="{Binding Type.Name}" />
-                <TextBlock Grid.Row="2" Grid.Column="1" Grid.ColumnSpan="3" VerticalAlignment="Center" Margin="10,0,0,0" Text="{Binding Type.Manufacturer}" />
-                <TextBlock Grid.Row="3" Grid.Column="1" Grid.ColumnSpan="3" VerticalAlignment="Center" Margin="10,0,0,0" Text="{Binding Type.Simulator}" />
-                <TextBlock Grid.Row="4" Grid.Column="1" Grid.ColumnSpan="3" VerticalAlignment="Center" Margin="10,0,0,0" Text="{Binding Type.Category}" />
-
-                <TextBlock Grid.Row="5" Grid.Column="1" VerticalAlignment="Center" Margin="10,10,0,0" Text="{Binding Type.NeedsCoPilot}" />
-                <TextBlock Grid.Row="6" Grid.Column="1" VerticalAlignment="Center" Margin="10,0,0,0" Text="{Binding Type.NeedsFlightEngineer}" />
-                <StackPanel Grid.Row="7" Grid.Column="1" Orientation="Horizontal">
-                    <TextBlock VerticalAlignment="Center" Margin="10,0,0,0" Text="{Binding Type.MinimumRunwayLength}" />
+                <StackPanel Name="EngineInfo" Grid.Row="1" Grid.Column="1" Grid.ColumnSpan="3" Orientation="Horizontal" Margin="0,15,0,0" Visibility="{Binding Type, Converter={StaticResource NullItemToVisibilityConverter}}">
+                    <TextBlock VerticalAlignment="Center" Text="{Binding Type.EngineCount}" />
+                    <TextBlock VerticalAlignment="Center" Margin="5,0,5,0">x</TextBlock>
+                    <TextBlock VerticalAlignment="Center" Text="{Binding Type.EngineModel}" />
+                    <TextBlock VerticalAlignment="Center" Margin="5,0,0,0">[</TextBlock>
+                    <TextBlock VerticalAlignment="Center" Text="{Binding Type.EngineType}" />
+                    <TextBlock VerticalAlignment="Center">]</TextBlock>
+                </StackPanel>
+                <TextBlock Grid.Row="2" Grid.Column="1" VerticalAlignment="Center" Text="{Binding Type.FuelType}" />
+                <TextBlock Grid.Row="3" Grid.Column="1" VerticalAlignment="Center" FontFamily="Consolas" FontSize="14" Text="{Binding Type.EmptyWeight, Converter={StaticResource SettingsUnitConverter}, ConverterParameter=weight|F1|true}" />
+                <TextBlock Grid.Row="4" Grid.Column="1" VerticalAlignment="Center" FontFamily="Consolas" FontSize="14" Text="{Binding Type.FuelTotalCapacity, Converter={StaticResource SettingsUnitConverter}, ConverterParameter=fuel|F1|true}" />
+                <TextBlock Grid.Row="5" Grid.Column="1" VerticalAlignment="Center" FontFamily="Consolas" FontSize="14" Text="{Binding Type.TotalFuelWeight, Converter={StaticResource SettingsUnitConverter}, ConverterParameter=weight|F1|true}" />
+                <TextBlock Grid.Row="6" Grid.Column="1" VerticalAlignment="Center" FontFamily="Consolas" FontSize="14" Text="{Binding Type.MaxGrossWeight, Converter={StaticResource SettingsUnitConverter}, ConverterParameter=weight|F1|true}" />
+                <StackPanel Name="RunwayInfo" Grid.Row="7" Grid.Column="1" Orientation="Horizontal" Visibility="{Binding Type, Converter={StaticResource NullItemToVisibilityConverter}}">
+                    <TextBlock VerticalAlignment="Center" Text="{Binding Type.MinimumRunwayLength}" />
                     <TextBlock VerticalAlignment="Center" Margin="5,0,0,0">feet</TextBlock>
                 </StackPanel>
-                <StackPanel Grid.Row="8" Grid.Column="1" Orientation="Horizontal">
-                    <TextBlock VerticalAlignment="Center" Margin="10,0,0,0" Text="{Binding Type.EngineCount}" />
-                    <TextBlock VerticalAlignment="Center" Margin="5,0,5,0">x</TextBlock>
-                    <TextBlock VerticalAlignment="Center" Text="{Binding Type.EngineType}" />
-                </StackPanel>
-                <TextBlock Grid.Row="9" Grid.Column="1" VerticalAlignment="Center" Margin="10,0,0,0" Text="{Binding Type.IsGearRetractable}" />
-                <TextBlock Grid.Row="10" Grid.Column="1" VerticalAlignment="Center" Margin="10,0,0,0" Text="{Binding Type.FlapsAvailable}" />
 
-                <TextBlock Grid.Row="5" Grid.Column="3" VerticalAlignment="Center" Margin="10,15,0,0" Text="{Binding Type.FuelType}" />
-                <TextBlock Grid.Row="6" Grid.Column="3" VerticalAlignment="Center" Margin="10,0,0,0" FontFamily="Consolas" FontSize="14" Text="{Binding Type.FuelTotalCapacity, Converter={StaticResource SettingsUnitConverter}, ConverterParameter=fuel|F1|true}" />
-                <TextBlock Grid.Row="7" Grid.Column="3" VerticalAlignment="Center" Margin="10,0,0,0" FontFamily="Consolas" FontSize="14" Text="{Binding Type.TotalFuelWeight, Converter={StaticResource SettingsUnitConverter}, ConverterParameter=weight|F1|true}" />
-                <TextBlock Grid.Row="8" Grid.Column="3" VerticalAlignment="Center" Margin="10,0,0,0" Text="{Binding Type.RequiresManualFuelling}" />
+                <TextBlock Grid.Row="2" Grid.Column="2" VerticalAlignment="Center" >Co-pilot?:</TextBlock>
+                <TextBlock Grid.Row="3" Grid.Column="2" VerticalAlignment="Center">Flight engineer?:</TextBlock>
+                <TextBlock Grid.Row="4" Grid.Column="2" VerticalAlignment="Center" Margin="0,0,15,0">Retractable gear?:</TextBlock>
+                <TextBlock Grid.Row="5" Grid.Column="2" VerticalAlignment="Center">Flaps?:</TextBlock>
+                <TextBlock Grid.Row="6" Grid.Column="2" VerticalAlignment="Center">Manual fuelling?:</TextBlock>
+                <TextBlock Grid.Row="7" Grid.Column="2" VerticalAlignment="Center">Manual loading?:</TextBlock>
 
-                <TextBlock Grid.Row="10" Grid.Column="3" VerticalAlignment="Center" Margin="10,0,0,0" FontFamily="Consolas" FontSize="14" Text="{Binding Type.EmptyWeight, Converter={StaticResource SettingsUnitConverter}, ConverterParameter=weight|F1|true}" />
-                <TextBlock Grid.Row="11" Grid.Column="3" VerticalAlignment="Center" Margin="10,0,0,0" FontFamily="Consolas" FontSize="14" Text="{Binding Type.MaxGrossWeight, Converter={StaticResource SettingsUnitConverter}, ConverterParameter=weight|F1|true}" />
-                <TextBlock Grid.Row="12" Grid.Column="3" VerticalAlignment="Center" Margin="10,0,0,0" Text="{Binding Type.RequiresManualLoading}" />
+                <Image Grid.Row="2" Grid.Column="3" VerticalAlignment="Center" Source="{Binding Type.NeedsCoPilot, Converter={StaticResource BooleanToImageConverter}}" Width="12" Height="12" />
+                <Image Grid.Row="3" Grid.Column="3" VerticalAlignment="Center" Source="{Binding Type.NeedsFlightEngineer, Converter={StaticResource BooleanToImageConverter}}" Width="12" Height="12" />
+                <Image Grid.Row="4" Grid.Column="3" VerticalAlignment="Center" Source="{Binding Type.IsGearRetractable, Converter={StaticResource BooleanToImageConverter}}" Width="12" Height="12" />
+                <Image Grid.Row="5" Grid.Column="3" VerticalAlignment="Center" Source="{Binding Type.FlapsAvailable, Converter={StaticResource BooleanToImageConverter}}" Width="12" Height="12" />
+                <Image Grid.Row="6" Grid.Column="3" VerticalAlignment="Center" Source="{Binding Type.RequiresManualFuelling, Converter={StaticResource BooleanToImageConverter}}" Width="12" Height="12" />
+                <Image Grid.Row="7" Grid.Column="3" VerticalAlignment="Center" Source="{Binding Type.RequiresManualLoading, Converter={StaticResource BooleanToImageConverter}}" Width="12" Height="12" />
             </Grid>
         </GroupBox>
     </Grid>
